--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
     scope:
       path: ""
     values:
-      layout: "default"
+      layout: "page"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
