Add animation disable option
Turns off text shake. TODO: Need to figure out some way for it to also apply to GIFs (especially Tenna's special image-dialogue)

--- a/_includes/config
+++ b/_includes/config
@@ -17,6 +17,11 @@
 			Dim colors
 		</label>
 
+		<label for="toggle-anim" class="toggle">
+			<input type="checkbox" id="toggle-anim" class="visually-hidden">
+			Disable animations
+		</label>
+
 		{%- comment %}
 		<label for="toggle-opendyslexic" class="toggle">
 			<input type="checkbox" id="toggle-opendyslexic" class="visually-hidden">
