Have animation toggle turn GIFs to static PNGs
YAYYY I FIGURED IT OUT. Okay so what it does is d-sprite automatically adds the PNG version of any sprite, but CSS hides it until animations are disabled. For stuff like Tenna's text, you'll have to manually add both GIF/PNG versions with the "animswitch" class.

Incidentally while making the change I also made the Sweet Cap'n Cakes sprites transparent to match the rest

--- a/_includes/config
+++ b/_includes/config
@@ -19,7 +19,7 @@
 
 		<label for="toggle-anim" class="toggle">
 			<input type="checkbox" id="toggle-anim" class="visually-hidden" checked>
-			Text animations
+			Animations
 		</label>
 
 		{%- comment %}
