Add OpenDyslexic font option
I thiiink it's good with the various fonts. But we'll see :/

--- a/_includes/config
+++ b/_includes/config
@@ -22,12 +22,10 @@
 			Animations
 		</label>
 
-		{%- comment %}
 		<label for="toggle-opendyslexic" class="toggle">
 			<input type="checkbox" id="toggle-opendyslexic" class="visually-hidden">
-			Use dyslexia-friendly font
+			Dyslexia-friendly font
 		</label>
-		{% endcomment %}
 
 		<button id="open-choices">Show all choices</button>
 	</section>
